# clog

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  INSTALL.md  README.md  install.sh  main.py  pyproject.toml  quickstart.py  test_clog.py  test_continuous_data.py  test_no_ui.py  test_populated_tui.py  test_tui.py
clog/: __init__.py
examples/: pytorch_training.py  pytorch_training_demo.py  simple_demo.py  simple_demo_no_ui.py
src/: lib.rs  ui.rs
tests/: test_clog.py
