[package]
name = "clog"
version = "0.1.0"
edition = "2021"

[lib]
name = "clog"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
crossterm = "0.29.0"
pyo3 = { version = "0.25.0", features = ["extension-module", "auto-initialize"] }
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
